Styles fixed for dark user preference

--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@
     background: black;
   }
   #hero_search_result{
-    background: transparent;
+    background: black;
   }
   #search_hero{
     color: white;
